Fractals WIP, mostly scaffolding, sln dnc aotc

--- a/Fractals/Fractals.Contracts/Fractals.Contracts.csproj
+++ b/Fractals/Fractals.Contracts/Fractals.Contracts.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
+    <AssemblyName>Fractals.Contracts</AssemblyName>
+    <RootNamespace>Fractals.Contracts</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
