--- a/Fractals/Console/Fractals.Console.csproj
+++ b/Fractals/Console/Fractals.Console.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
+    <AssemblyName>Fractals.Console</AssemblyName>
+    <RootNamespace>Fractals.Console</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
